[package]
name = "chatgpt-tray"
version = "0.1.0"
edition = "2021"
build = "build.rs"

authors = ["ChatGPT"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["system-tray"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
